--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,11 +11,15 @@
     border: none;
 }
 
-.container.borders div[class*='col-'] {
+.borders div[class*='col-'] {
     border: 1px solid #eee;
 }
 
 #add {
     width: 100%;
     font-size: 1.5rem;
+}
+
+.event {
+    position: absolute;
 }
