--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Open Sans','Segoe UI', calibri, sans-serif;
+}
 /*.modal-open {
     overflow-y: auto
 } */
@@ -30,12 +33,37 @@
     font-size: 1.5rem;
 }
 
+#clock-content {
+    font-size: 2.5rem;
+    color: #000;
+    -webkit-text-fill-color: #fff;
+    -webkit-text-stroke: 2px #000;
+    text-align: center;
+    text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
 #schedule-content {
     position: relative;
 }
 
+#schedule-modal label {
+    display: block;
+    font-weight: bold;
+}
+
+#schedule-modal input:not([type="color"]):not([type="file"]) {
+    width: 100%;
+    min-height: 30px;
+    border-radius: 8px;
+    margin-bottom: 16px;
+}
+
 .event {
     position: absolute;
+    padding: 8px;
+    border-radius: 12px;
+    color: #000;
+    opacity: 0.85;
 }
 
 .center {
