--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,9 @@
-* {
+html, body {
+    width: 100vw;
+    min-height: 100vh;
     font-family: 'Open Sans','Segoe UI', calibri, sans-serif;
 }
+
 /*.modal-open {
     overflow-y: auto
 } */
@@ -18,11 +21,6 @@
     border: none;
 }
 
-.container {
-    width: 100vw;
-    min-height: 100vh;
-}
-
 .borders div[class*='col-'] {
     border: 1px solid #eee;
 }
@@ -33,7 +31,26 @@
     font-size: 1.5rem;
 }
 
+.buttons {
+    position: fixed;
+    z-index: 99;
+}
+
+#clock, #schedule {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+}
+
+#clock {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;    
+}
+
 #clock-content {
+    width: 100%;
+    height: 100%;
     font-size: 2.5rem;
     color: #000;
     -webkit-text-fill-color: #fff;
@@ -46,12 +63,12 @@
     position: relative;
 }
 
-#schedule-modal label {
+.modal label {
     display: block;
     font-weight: bold;
 }
 
-#schedule-modal input:not([type="color"]):not([type="file"]) {
+.modal input:not([type="color"]):not([type="file"]) {
     width: 100%;
     min-height: 30px;
     border-radius: 8px;
