--- a/platforms/android/app/src/main/assets/www/css/style.css
+++ b/platforms/android/app/src/main/assets/www/css/style.css
@@ -1,6 +1,8 @@
 html, body {
     width: 100vw;
     min-height: 100vh;
+    margin: auto;
+    overflow-x: hidden;
     font-family: 'Open Sans','Segoe UI', calibri, sans-serif;
 }
 
@@ -9,7 +11,11 @@ html, body {
 } */
 
 .hide {
-    display: none;
+    /* display: none; */
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+    overflow: hidden;
 }
 
 .close {
@@ -36,10 +42,16 @@ html, body {
     z-index: 99;
 }
 
+.switch {
+    background-color: rgba(0,0,0,0.6) !important;
+    border-color: rgba(0,0,0,0.6) !important;
+}
+
 #clock, #schedule {
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    padding: 8px;
 }
 
 #clock {
@@ -68,11 +80,15 @@ html, body {
     font-weight: bold;
 }
 
-.modal input:not([type="color"]):not([type="file"]) {
-    width: 100%;
-    min-height: 30px;
+.modal input {
+    min-height: 40px;
     border-radius: 8px;
     margin-bottom: 16px;
+}
+
+.hw {
+    display: inline-block !important;
+    width: 49%;
 }
 
 .event {
