--- a/platforms/browser/www/css/style.css
+++ b/platforms/browser/www/css/style.css
@@ -1,12 +1,21 @@
-* {
+html, body {
+    width: 100vw;
+    min-height: 100vh;
+    margin: auto;
+    overflow-x: hidden;
     font-family: 'Open Sans','Segoe UI', calibri, sans-serif;
 }
+
 /*.modal-open {
     overflow-y: auto
 } */
 
 .hide {
-    display: none;
+    /* display: none; */
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+    overflow: hidden;
 }
 
 .close {
@@ -28,9 +37,21 @@
     font-size: 1.5rem;
 }
 
+.buttons {
+    position: fixed;
+    z-index: 99;
+}
+
+.switch {
+    background-color: rgba(0,0,0,0.6) !important;
+    border-color: rgba(0,0,0,0.6) !important;
+}
+
 #clock, #schedule {
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     min-height: 100vh;
+    padding: 8px;
 }
 
 #clock {
@@ -54,16 +75,20 @@
     position: relative;
 }
 
-#schedule-modal label {
+.modal label {
     display: block;
     font-weight: bold;
 }
 
-#schedule-modal input:not([type="color"]):not([type="file"]) {
-    width: 100%;
-    min-height: 30px;
+.modal input {
+    min-height: 40px;
     border-radius: 8px;
     margin-bottom: 16px;
+}
+
+.hw {
+    display: inline-block !important;
+    width: 49%;
 }
 
 .event {
