--- a/platforms/android/app/src/main/assets/www/css/style.css
+++ b/platforms/android/app/src/main/assets/www/css/style.css
@@ -139,3 +139,21 @@ html, body {
     height: 8px;
     background-color: #fff;
 }
+
+.modal-backdrop {
+    z-index: 999;
+}
+
+.modal {
+    z-index: 1000;
+}
+
+#loading {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;
+    background-color: rgba(0,0,0,0.75);
+}
